syntax = "proto3";
package Need4Protocol;
import "protos/Action.proto";
import "protos/User.proto";

message UserPermission {
	User user = 1;
	Permission permission = 2;
}

message ActionRequirement {
	ActionDetails action = 1;
	Permission requirement = 2;
}
message State {
	int32 id = 1;
	string description = 2;
}

message Relation {
	int32 key1 = 1;
	int32 key2 = 2;
}

message RelationshipType {
	int32 id = 1;
	string name = 2;
}
 
message Relationship {
	int32 id = 1;
	RelationshipType relationship_type = 2;
	Relation relation = 3;
	State state = 4;
}

message Permission {
	int32 id = 1;
	PermissionType permission_type = 2;
	RelationshipType relationship_type = 3;
	int32 relation_id = 4;
}

message Requirement {
	int32 id = 1;
	PermissionType permission_type = 2;
	RelationshipType relationship_type = 3;
	int32 action_id = 4;
}

message PermissionSet {
	int32 id = 1;
	repeated Permission permissions = 2;
}

message PermissionType {
	int32 id = 1;
	string name = 2;
	string description = 3;
}

message PermissionCondition {
	int32 id = 1;
	string name = 2;
	string description = 3;
}


message PermissionRequest {
	int32 key1 = 1;
	int32 key2 = 2;
	RelationshipType relationship_type = 3;
	PermissionType permission_type = 4;
}
